--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
-site_name: がんちゃんのブログ
+site_name: kenicのブログ
 site_url: https://kenic.github.io
-site_description: てきとうにかいちゃうぞ
+site_description: misc misc misc and misc
 plugins:
   - rss
   - search:
