--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ plugins:
       lang:
         - en
         - ja
+  - macros
   - awesome-pages
   - git-revision-date-localized:
       enable_creation_date: true
