--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         # プラグインとGitPythonをインストール
-        run: pip install mkdocs-material mkdocs-macros-plugin GitPython
+        run: pip install mkdocs-material mkdocs-macros-plugin GitPython mkdocs-rss-plugin
 
       - name: Deploy
         run: mkdocs gh-deploy --force
